--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,223 +1,127 @@
 cmake_minimum_required(VERSION 3.16)
-project(collaborative-editor VERSION 0.1.0 LANGUAGES CXX)
+project(collaborative_editor VERSION 0.1.0 LANGUAGES CXX)
 
-# Set C++20 standard
+# Set C++20 as the standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Options
-option(BUILD_CLIENT "Build the client" ON)
-option(BUILD_SERVER "Build the server" ON)
+# Build options
 option(BUILD_TESTS "Build tests" ON)
+option(BUILD_SERVER "Build server component" ON)
+option(BUILD_CLIENT "Build client component" ON)
 
-# Find required packages
-find_package(Boost REQUIRED COMPONENTS system thread)
+# Find packages
+find_package(Threads REQUIRED)
 find_package(nlohmann_json REQUIRED)
+find_package(Boost REQUIRED COMPONENTS system)
 find_package(spdlog REQUIRED)
 find_package(OpenSSL REQUIRED)
-find_package(Threads REQUIRED)
+find_package(GTest REQUIRED)
+find_package(Qt6 COMPONENTS Core Gui Widgets REQUIRED)
 
-# Common library - shared code between client and server
+# Enable automoc for Qt
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+
+# Include directories
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${GTEST_INCLUDE_DIRS}
+)
+
+# Common library
 add_library(common STATIC
-    src/common/crdt/document.cpp
+    src/common/ot/operation.cpp
+    src/common/document/document_controller.cpp
+    src/common/document/history_manager.cpp
+    src/common/document/operation_manager.cpp
 )
 
-target_include_directories(common
-    PUBLIC
-    ${PROJECT_SOURCE_DIR}/include
+target_include_directories(common PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-target_link_libraries(common
-    PUBLIC
+target_link_libraries(common PUBLIC
+    Threads::Threads
     nlohmann_json::nlohmann_json
-    spdlog::spdlog
     Boost::system
+    spdlog::spdlog
     OpenSSL::SSL
     OpenSSL::Crypto
 )
 
-# C++20 specific compile features
-target_compile_features(common PRIVATE cxx_std_20)
-
-# Server executable
+# Server application
 if(BUILD_SERVER)
     add_executable(server
         src/server/main.cpp
     )
     
-    target_link_libraries(server
-        PRIVATE
+    target_link_libraries(server PRIVATE
         common
-        Boost::system
-        Boost::thread
-        Threads::Threads
-    )
-    
-    # C++20 specific compile features
-    target_compile_features(server PRIVATE cxx_std_20)
-    
-    # Install server
-    install(TARGETS server
-        RUNTIME DESTINATION bin
     )
 endif()
 
-# Client executable
+# Client application
 if(BUILD_CLIENT)
-    # Qt GUI Client
-    find_package(Qt6 COMPONENTS Core Widgets REQUIRED)
-    
     add_executable(client
         src/client/main.cpp
+        src/client/document_editor.cpp
+        src/client/session_manager.cpp
     )
     
-    target_link_libraries(client
-        PRIVATE
+    target_link_libraries(client PRIVATE
         common
         Qt6::Core
+        Qt6::Gui
         Qt6::Widgets
-        Boost::system
-        Boost::thread
-        Threads::Threads
-    )
-    
-    # C++20 specific compile features
-    target_compile_features(client PRIVATE cxx_std_20)
-    
-    # Install client
-    install(TARGETS client
-        RUNTIME DESTINATION bin
-    )
-    
-    # Terminal Client with NCurses
-    find_package(Curses REQUIRED)
-    
-    add_executable(ncurses_client 
-        src/client/ncurses_client.cpp
-    )
-    
-    target_link_libraries(ncurses_client
-        PRIVATE
-        common
-        ${CURSES_LIBRARIES}
-        Boost::system
-        Boost::thread
-        Threads::Threads
-    )
-    
-    target_include_directories(ncurses_client
-        PRIVATE
-        ${CURSES_INCLUDE_DIR}
-        ${PROJECT_SOURCE_DIR}/include
-    )
-    
-    # C++20 specific compile features
-    target_compile_features(ncurses_client PRIVATE cxx_std_20)
-    
-    # Install ncurses client
-    install(TARGETS ncurses_client
-        RUNTIME DESTINATION bin
     )
 endif()
 
 # Tests
 if(BUILD_TESTS)
-    # Enable testing
-    enable_testing()
+    # Check if test files exist before adding them
+    set(TEST_FILES "")
     
-    # Find GTest
-    find_package(GTest REQUIRED)
-    
-    # Test utilities
-    add_library(test_utils STATIC
-        tests/utils/test_helpers.cpp
-    )
-    
-    target_include_directories(test_utils
-        PUBLIC
-        ${PROJECT_SOURCE_DIR}/tests/utils
-    )
-    
-    target_link_libraries(test_utils
-        PUBLIC
-        common
-        GTest::GTest
-    )
-    
-    # C++20 specific compile features
-    target_compile_features(test_utils PRIVATE cxx_std_20)
-    
-    # Common module tests
-    file(GLOB_RECURSE COMMON_TEST_SOURCES
-        "tests/common/*.cpp"
-    )
-
-    add_executable(common_tests ${COMMON_TEST_SOURCES})
-
-    target_link_libraries(common_tests
-        PRIVATE
-        test_utils
-        common
-        GTest::GTest
-        GTest::Main
-    )
-
-    # C++20 specific compile features
-    target_compile_features(common_tests PRIVATE cxx_std_20)
-    
-    # Client module tests
-    if(BUILD_CLIENT)
-        file(GLOB_RECURSE CLIENT_TEST_SOURCES
-            "tests/client/*.cpp"
-        )
-        
-        if(CLIENT_TEST_SOURCES)
-            add_executable(client_tests ${CLIENT_TEST_SOURCES})
-            
-            target_link_libraries(client_tests
-                PRIVATE
-                test_utils
-                common
-                GTest::GTest
-                GTest::Main
-                Qt6::Core
-                Qt6::Test
-            )
-            
-            # C++20 specific compile features
-            target_compile_features(client_tests PRIVATE cxx_std_20)
-            
-            # Register with CTest
-            add_test(NAME ClientTests COMMAND client_tests)
-        endif()
+    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/common/document/history_manager_test.cpp")
+        list(APPEND TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/tests/common/document/history_manager_test.cpp")
     endif()
     
-    # Server module tests
-    if(BUILD_SERVER)
-        file(GLOB_RECURSE SERVER_TEST_SOURCES
-            "tests/server/*.cpp"
-        )
-        
-        if(SERVER_TEST_SOURCES)
-            add_executable(server_tests ${SERVER_TEST_SOURCES})
-            
-            target_link_libraries(server_tests
-                PRIVATE
-                test_utils
-                common
-                GTest::GTest
-                GTest::Main
-            )
-            
-            # C++20 specific compile features
-            target_compile_features(server_tests PRIVATE cxx_std_20)
-            
-            # Register with CTest
-            add_test(NAME ServerTests COMMAND server_tests)
-        endif()
+    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/common/document/document_controller_test.cpp")
+        list(APPEND TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/tests/common/document/document_controller_test.cpp")
     endif()
     
-    # Register common tests with CTest
-    add_test(NAME CommonTests COMMAND common_tests)
+    # Only add test executable if test files exist
+    if(TEST_FILES)
+        enable_testing()
+        
+        add_executable(common_tests ${TEST_FILES})
+        
+        target_link_libraries(common_tests PRIVATE
+            common
+            GTest::GTest
+            GTest::Main
+        )
+        
+        add_test(NAME common_tests COMMAND common_tests)
+    else()
+        message(STATUS "No test files found. Skipping test compilation.")
+    endif()
+endif()
+
+# Install
+install(TARGETS common
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+)
+
+if(BUILD_SERVER)
+    install(TARGETS server RUNTIME DESTINATION bin)
+endif()
+
+if(BUILD_CLIENT)
+    install(TARGETS client RUNTIME DESTINATION bin)
 endif()
